applications/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: ""
  labels:
    kubernetes.io/metadata.name: ingress-test
  name: ingress-test
spec:
  finalizers:
  - kubernetes
