applications/pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: https-example
  namespace: ingress-test
  labels:
    app: https-example
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: httpd
      image: ubi8/httpd-24
      volumeMounts:
#        - name: ssl
#          mountPath: "/etc/httpd/tls"
        - name: webdir
          mountPath: "/var/www/html"
      ports:
        - containerPort: 8443
          protocol: TCP
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
  volumes:    
    - name: webdir
      configMap:
        name: 'web-dir'
        items:
          - key: index.html
            path: index.html
          - key: bar.html
            path: bar.html
          - key: foo.html
            path: foo.html
#    - name: ssl
#      secret:
#        secretName: https-ssl-bundle
#        defaultMode: 0400
#        items:
#          - key: tls.key
#            path: localhost.key
#          - key: tls.crt
#            path: localhost.crt
