applications/route.yaml
#app.kubernetes.io/instance: applications
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,ServerSideApply=true
  labels:
    app.kubernetes.io/instance: applications
  generateName: https-example-
  namespace: ingress-test
spec:
  httpHeaders:
    actions:
      response:
      - name: X-Frame-Options
        action:
          type: Set
          set:
            value: DENY
